--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Minimal UI Kit</title>
+    <title>Velonna Dashboard</title>
   </head>
 
   <body>
